Fixes of layout issues.

--- a/styles/block/management.sass
+++ b/styles/block/management.sass
@@ -56,3 +56,9 @@
                     td:nth-child(#{$id})
                         min-width: $col !important
                         max-width: $col !important
+        .controls
+            .dropdown
+                left: 50%
+                right: auto
+                transform: translateX(-50%)
+
