--- a/styles/block/results.sass
+++ b/styles/block/results.sass
@@ -19,12 +19,15 @@
                     display: inline-block
         .sorter
             line-height: 15px
-            min-width: 85px
+            min-width: 105px
             margin-left: 20px
             padding-top: 8px
             position: relative
+            text-align: right
             button
                 font-size: 14px
+            .dropdown
+                text-align: left
 
     .contract
         margin-bottom: 90px
