--- a/styles/components/button.sass
+++ b/styles/components/button.sass
@@ -128,7 +128,6 @@ button
 
 .file-upload
     font-size: 14px
-    display: inline-block
     padding: 0 30px
     input
         display: none
