--- a/styles/components/footer.sass
+++ b/styles/components/footer.sass
@@ -19,7 +19,7 @@ footer
                 width: 100px
                 height: 53px
                 display: inline-block
-                background: url("/images/logo/logo-small.png")
+                background: url("/images/logo/logo-small-gray.png")
                 background-size: cover
                 &:hover
                     filter: brightness(0.75)
